--- a/style.css
+++ b/style.css
@@ -4,6 +4,13 @@ html {
 
 body{
     background-color:#5D6D7E  ;
+    font-family: 'Vollkorn', serif;
+}
+
+.nav-item:hover{
+    font-weight: bold;
+    color: pink;
+
 }
 
 /*section 1 style */
@@ -23,14 +30,17 @@ body{
 .centered {
     position: absolute;
     top: 50%;
-    left: 75%;
+    left: 60%;
     transform: translate(-50%, -50%);
     margin: 5px;
     padding: 10px;
-   
+   width: fit-content;
+   height: fit-content;
     border: 3px solid white;
   }
-
+  .centered h1{
+      font-size: 8vw;
+  }
 
 #section2{
     height: 50%;
@@ -47,18 +57,30 @@ body{
      text-align: justify;
      padding: 10%;
      line-height: 2.5;
+     font-size: 20px;
  }
 
  #section4{
-    height: 50%;
-    
+    height: 70%;
+    min-height: fit-content;
+    color: white;
+    font-size: 20px;
     text-align: justify;
     padding: 10%;
     line-height: 2.5;
 }
 
-#education-header{
-    background-image: url(education.jpg);
-    height: 20vh;
+
+#sec4back{
+    background-image: url(lines.jpg);
     background-attachment: fixed;
+}
+
+.fa{
+    color: white;
+    font-size: 25px;
+}
+.fa:hover{
+    color: #5D6D7E;
+    font-weight: bold;
 }
